--- a/style.css
+++ b/style.css
@@ -38,52 +38,75 @@ body{
     font-size: 16px;   
     margin: 0;
     padding: 0;
-}
-
-
-.C1{
-    height: 876px;
-    border: 1px solid green;
-
-}
-
-.C2{
-    border: 1px solid green;
-}
-
-.C3{
-    border: 1px solid green;
-    background-color: var(--clr-blå);
-    height: 1077px;
-}
-
-.C4{
-    border: 1px solid green;
-}
-
-.C5{
-    border: 1px solid green;
-    height: 542;
-    background-color: var(--clr-blå);
-}
-
-.C6{
-    border: 1px solid green;
-
-}
-
-.navbar{
-    background-color: blue;
-
-}
-.knapp{
-    display: grid;
-    height: 78px;
     
-    li{
-        grid-row:1;
-        text-align: center;
-        list-style: none;
-        
-    }
 }
+
+/* FÖLJANDE KOD SNODD FRÅN https://www.w3schools.com/howto/howto_css_switch.asp */
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+ 
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+
+.slider.round {
+    border-radius: 34px;
+  }
+  
+.slider.round:before {
+    border-radius: 50%;
+  } 
+
+  /* HÄR SLUTAR SNODD KOD */
+
+  .signin{
+    background-color: var(--clr-primary);
+  }
