--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ background-color: var(--clr-info);
   grid-template-rows: auto;
   height:auto ;
   align-items: center;
+  margin-top: 2rem;
 }
 
 .astore{
@@ -232,7 +233,7 @@ cursor: pointer;
 }
  .pilcont{
   display:grid;
-  width: ;
+
   grid-template-columns:1fr auto;
   align-items: center;
   margin-left: 100px;
@@ -241,16 +242,215 @@ cursor: pointer;
   font-family: 14px;
  }
 
-
-
-
-
-
-
-
 textarea{
   text-decoration: none;
   resize: none;
   width: 200px;
 
 }
+
+.c31 {
+  text-align: center;
+  margin: 5px;
+  h1{
+    font-weight: 800;
+    font-size: 27.9px;
+  }
+
+  p{
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--clr-font2);
+  }
+}
+
+.c3-2{
+  width: 90%;
+  margin: 0 auto;
+}
+
+.kort1 {
+  display: grid;
+
+  place-content: center;
+  align-items: center;
+}
+.kortico{
+  grid-row: 1 / 3;
+  margin-bottom:50px;
+
+
+}
+.korth1{
+grid-column: 2;
+margin-left:30px;
+margin-bottom: 0;
+color:var(--clr-font1);
+font-weight: 800;
+font-size: 20px;
+
+}
+.kortp{
+grid-column: 2;
+grid-column: 2;
+margin-left: 30px;
+color:var(--clr-font2);
+font-weight: 400;
+font-size: 16px;
+}
+
+.c4 {
+  background-color: var(--clr-grey1);
+  text-align: center;
+}
+
+.telebild{
+  margin-left: 10px;
+  margin-right: 20px;
+  h1{
+    font-size: 27.9px;
+    color: var(--clr-font1);
+    font-weight: 800;
+  }
+}
+
+.bottele{
+  margin-left: 10px;
+  margin-right: 20px;
+  h1{
+    font-size: 21.6px;
+    color: var(--clr-font1);
+    font-weight: 800;
+  }
+
+  p{
+    font-size: 16px;
+    color: var(--clr-font2);
+    font-weight: 400;
+  }
+}
+
+.c5{
+  
+  margin:1rem;
+  
+}
+
+.faq1{
+  border: 1px solid #E2E5F1;;
+  label{
+    font-size: 16px;
+    font-weight: 600 ;
+    color:#131022;
+    padding:0.5rem;}
+    
+  
+  p{
+
+    font-size: 14px;
+    font-weight: 400 ;
+    color:var(--clr-font2);
+    padding:1rem;}
+
+}
+
+.faq1b{
+  border: 1px solid #E2E5F1;
+  display:grid;
+  grid-template-columns: 1fr auto;
+  place-items: center;
+}
+.faqbtrv
+{
+  background-color: transparent;
+  border: none;
+  margin-bottom:5px;
+  padding-left: 1rem;
+  
+}
+.faq2{
+  border: 1px solid #E2E5F1;
+  display:grid;
+  grid-template-columns: 1fr auto;
+  padding:0.5rem;
+  label{
+    font-size: 16px;
+    font-weight: 600 ;
+    color:#131022;
+    padding-left: 1rem;
+  }
+  
+}
+.faq3{
+  border: 1px solid #E2E5F1;
+  display:grid;
+  grid-template-columns: 1fr auto;
+  padding:0.5rem;
+  label{
+    font-size: 16px;
+    font-weight: 600 ;
+    color:#131022;
+    padding-left: 1rem;
+  }
+}
+.faq4{
+  border: 1px solid #E2E5F1;
+  display:grid;
+  grid-template-columns: 1fr auto;
+  padding:0.5rem;
+  label{
+    font-size: 16px;
+    font-weight: 600 ;
+    color:#131022;
+    padding-left: 1rem;
+  }
+}
+.faq5{
+  border: 1px solid #E2E5F1;
+  display:grid;
+  grid-template-columns: 1fr auto;
+  padding:0.5rem;
+  label{
+    font-size: 16px;
+    font-weight: 600 ;
+    color:#131022;
+    padding-left: 1rem;
+  }
+}
+.faq6{
+  border: 1px solid #E2E5F1;
+  display:grid;
+  grid-template-columns: 1fr auto;
+  padding:0.5rem;
+  label{
+    font-size: 16px;
+    font-weight: 600 ;
+    color:#131022;
+    padding-left: 1rem;
+  }
+}
+
+.subkort{
+  background-color: #f3f6ff;
+}
+
+.contactbtn-con{
+  display:flex;
+  padding-top:2rem;
+  padding-bottom:1rem;
+  margin-left: 118px;
+}
+.contactbtn{
+  background-color: var(--clr-primary);
+  display:flex;
+  align-items: center;
+  text-align: center;
+  color: var(--clr-grey1);
+  border-radius: 8px;
+  text-decoration: none;
+  padding: 12px 25px;
+  border:none;
+  place-content: center;
+}
+  
+
