--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@
 
 *{
     box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
     
     
 }
@@ -44,14 +46,14 @@ body{
     font-weight: 400;
     font-style: normal;
     font-size: 16px;   
-    margin: 0;
-    padding: 0;
 }
 
 button:hover{
  cursor:pointer;
 }
-
+.container{
+  max-width: 720px;
+}
 /* FÖLJANDE KOD SNODD FRÅN https://www.w3schools.com/howto/howto_css_switch.asp */
 
 .switch {
@@ -117,16 +119,16 @@ input:checked + .slider:before {
   /* HÄR SLUTAR SNODD KOD */
 
 .c1 {
-  padding-right:1rem;
-  padding-left:1rem;
   display:grid;
-  
-  grid-template-columns: 1fr auto auto;
+  grid-template-columns:1fr auto auto;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
-  margin-top: 0.65rem;
+  gap:1rem;
+;
 }
- 
+.logo{
+  margin: 1rem;
+}
 .signin{
     background-color: var(--clr-primary);
     text-align: center;
@@ -147,14 +149,11 @@ background-color: var(--clr-info);
     display: none;
   }
 
-.logo {
-    width: min-content;
-  }
 
 .burgerknapp{
     border: none;
     background-color: transparent;
-    padding-right: 2rem;
+    padding-right: .5rem;
    
   }
 
@@ -167,6 +166,9 @@ background-color: var(--clr-info);
   background-image: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
   text-align: center;
   align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
   
 }
 
@@ -198,6 +200,7 @@ background-color: var(--clr-info);
   height:auto ;
   align-items: center;
   margin-top: 2rem;
+  gap:1rem;
 }
 
 .playbtn {
@@ -227,15 +230,18 @@ cursor: pointer;
 }
 
  .pilcont{
+  margin:2rem;
+  text-align: center;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  gap: 1rem;
-  margin-top: 1rem;
-  padding-bottom: 2rem;
- }
+  gap: .5rem;
+  button{
+    border:none;
+    background-color: transparent;
+  }
+
+}
 
 textarea{
   text-decoration: none;
@@ -344,6 +350,10 @@ font-size: 16px;
   }
 }
 
+.faqbtrv{
+  border:none;
+  background-color: transparent;
+}
 .faq1{
   /* border: 1px solid #E2E5F1;; */
   border-bottom: 1px solid #e2e5f1;
@@ -368,16 +378,10 @@ font-size: 16px;
   grid-template-columns: 1fr auto;
   place-items: center;
 }
-.faqbtrv
-{
-  background-color: transparent;
-  border: none;
-  margin-bottom:5px;
-  padding-left: 1rem;
-  
-}
+
 .faq2{
-  border-bottom: 1px solid #e2e5f1;  display:grid;
+  border-bottom: 1px solid #e2e5f1;  
+  display:grid;
   grid-template-columns: 1fr auto;
   padding:0.5rem;
   label{
@@ -389,7 +393,8 @@ font-size: 16px;
   
 }
 .faq3{
-  border-bottom: 1px solid #e2e5f1;  display:grid;
+  border-bottom: 1px solid #e2e5f1; 
+  display:grid;
   grid-template-columns: 1fr auto;
   padding:0.5rem;
   label{
@@ -464,7 +469,17 @@ font-size: 16px;
   align-items: center;
   justify-content: center;
   margin-top: 3rem;
-  padding-bottom: 36px;
+  padding-bottom: 3rem;
+  padding-top: 3rem;
+  gap:0;
+  margin:0 0;
+  label{
+    margin:0 0;
+  }
+  #textarea{
+    margin: 0 0;
+    height:40px;
+  }
 }
 
 
@@ -472,7 +487,7 @@ font-size: 16px;
   display:flex;
   padding-top:2rem;
   padding-bottom:1rem;
-  margin-left: 118px;
+  
 }
 .contactbtn{
   background-color: var(--clr-primary);
@@ -481,6 +496,18 @@ font-size: 16px;
   text-align: center;
   color: var(--clr-grey1);
   border-radius: 8px;
+  text-decoration: none;
+  padding: 12px 25px;
+  border:none;
+  place-content: center;
+}
+.contactbtn1{
+  background-color: var(--clr-primary);
+  display:flex;
+  align-items: center;
+  text-align: center;
+  color: var(--clr-grey1);
+  border-radius: 0px 8px 8px 0px;
   text-decoration: none;
   padding: 12px 25px;
   border:none;
@@ -499,127 +526,5 @@ font-size: 16px;
     color: var(--clr-grey6);
     font-weight: 400;
     font-size: 14px;
-  }
-}
-
-@media (width > 759px){
-
-  .dml{
-    display: flex;
-  }
-  
-  .tdm{
-    display:flex;
-    text-align: center;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    gap:.5rem;
-  }
- .c1{
-  margin: 2rem;
-  display: grid;
-  grid-template-columns: 1fr auto auto;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
- }
-
- .c2{
-  display:grid;
-  grid-template-columns: repeat(2, 1fr);
-  }
-  
-  h1{
-    display:inline-block;
-    text-align: center;
-    font-size: 44.3px;
-    grid-column: 1 / 2;
-}
-
-#c21{
-  grid-column: 1 / 3;
-  display: inline-block
-}
-#c22{
-  display:inline-block;
-  grid-row: 2;
-}
-#c23{
-  display:inline-block;
-  grid-row: 3;
-  flex-direction: column;
-  
-
-}
-#c24
-{
-  grid-row: 4;
-  display:flex;
-
-}
-#c25{
-  grid-row: 2 /5;
-  display: flex;
-}
-
-.logotyp{
-  display:flex;
-  gap: .5rem;
-  padding: 1rem;
-  
-  align-items: center;
-  justify-content: center;
-
-
-  #logo5{
-    display: none;
-  }
-  #logo6{
-    display:none;
-  }
-
-
-}
-/* .c3-2{
-  display:grid;
-  grid-template-columns: 1fr, auto;
-  grid-template-rows: 1fr, auto, auto;
-
-  #kort1{
-    grid-column: 1;
-  }
-  #kort2{grid-column: 2;}
-  #kort3{}
-  #kort4{}
-  #kort5{}
-  #kort6{}
-
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
-@media (width > 1299px){
-  .c1{
-    display:none
   }
 }
