--- a/style.css
+++ b/style.css
@@ -117,7 +117,9 @@ input:checked + .slider:before {
   } 
 
   /* HÄR SLUTAR SNODD KOD */
-
+.c1-2bg{
+  background-image: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
+}
 .c1 {
   display:grid;
   grid-template-columns:1fr auto auto;
@@ -163,7 +165,7 @@ background-color: var(--clr-info);
   }
 
 .c2 {
-  background-image: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
+  
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -261,9 +263,12 @@ textarea{
   h1{
     font-weight: 800;
     font-size: 27.9px;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
   }
 
   p{
+    padding: 1rem;
     font-size: 18px;
     font-weight: 400;
     color: var(--clr-font2);
@@ -305,11 +310,34 @@ font-weight: 400;
 font-size: 16px;
 }
 
+.creditphone{
+  display:none;
+}
+
+
 .c4 {
   background-color: var(--clr-grey1);
   text-align: center;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  h1{
+    padding-top:2rem;
+  }
+  p{
+    padding-top:2rem;
+  }
+  #trans-img-1{
+    display:none;
+  }
+  #trans-img-2{
+    display:none;
+  }
+  #h1desktop{
+    display:none;
+  }
+  #img-desktop{
+    display:none;
+  }
   
 }
 
@@ -341,11 +369,45 @@ font-size: 16px;
   }
 }
 
+.desktop-review{
+  display:none;
+}
+
+.learnbtn{
+  display:block ;
+  background-color: var(--clr-brandbtn);
+  width: 159px;
+  height: 44px;
+  border-radius: .5rem;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  img{
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    justify-content: center;
+  }
+  button{
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    justify-content: center;
+  }
+}
+
+
+
 .c5{
   margin:1rem;
   p{
     font-size: 18px;
     color: var(--clr-font2);
+    text-align: center;
+    
+  }
+  h1{
     text-align: center;
   }
 }
@@ -393,22 +455,33 @@ font-size: 16px;
   
 }
 .faq3{
-  border-bottom: 1px solid #e2e5f1; 
+  border-bottom: 1px solid #e2e5f1;  
   display:grid;
   grid-template-columns: 1fr auto;
   padding:0.5rem;
   label{
+    margin-right: 67px;
+    text-align: center;
     font-size: 16px;
     font-weight: 600 ;
     color:#131022;
     padding-left: 1rem;
   }
+  
+}
+#faqbt3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .faq4{
   border-bottom: 1px solid #e2e5f1;  display:grid;
   grid-template-columns: 1fr auto;
   padding:0.5rem;
+  text-align: left;
+  margin: 0;
   label{
+    margin-right: 67px;
     font-size: 16px;
     font-weight: 600 ;
     color:#131022;
@@ -527,4 +600,217 @@ font-size: 16px;
     font-weight: 400;
     font-size: 14px;
   }
+}
+
+@media (width > 1400px){
+  .container{ 
+    max-width: 1320px;}
+    .c1{
+      display: grid;
+      grid-template-columns: auto 1fr auto auto;
+      .burgerknapp{
+        display:none;
+      }
+    .signin{
+      display:block
+    }
+    .feat{
+      display:block;
+      text-decoration: none;
+      margin: 0;
+      
+    }
+  }
+  .c2{
+    display:grid;
+    padding-top:5rem;
+    #c25{
+      display:block;
+      grid-column: 3;
+      grid-row:1 / 5;
+    }
+    h1{
+      grid-column: 1 /3;
+    }
+    .breadtext{
+      grid-column: 1/3;
+      grid-row: 2;
+    }
+    .storerek{
+      display:flex;
+      grid-row:3;
+    }
+    .pilcont{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      grid-row:4;
+    }
+  }
+  .c3{
+    .logotyp{
+      display:flex;
+      padding-top:5rem;
+
+      
+    }  
+  }
+  .c3grid{
+    display:grid;
+    grid-template-columns: 1ft auto;
+    padding-bottom:5rem;
+    padding-top:5rem;
+
+  }
+  .creditphone{
+    display:block;
+    grid-column: 1;
+    grid-row: 1 / 3;
+  }
+  .c31{
+    grid-column: 2;
+  }
+  .c3-2{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+
+  .c4{
+
+    #trans-img-1{
+      display:block;
+    }
+    #trans-img-2{
+      display:block;
+    }
+
+    .imgshowrow{
+      padding-top:3rem;
+      padding-bottom:3rem;
+      display:flex;
+      flex-direction: row;
+    }
+    #h1desktop{
+      display:block;
+    }
+    #h1phone{
+      display:None;
+    }
+    #img-phone{
+      display:none;
+    }
+    #img-desktop{
+      display:block;
+    }
+  
+  
+  }
+    .desktop-review{
+      padding-bottom: 5rem;
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding-top: 5rem;
+      .desktop-grid-1{    
+        display:grid;
+        grid-template-columns: 1fr 1fr;  
+        
+      }
+      .desktop-grid-2{        
+        display:grid;
+        grid-template-columns: 1fr auto;  
+        padding-bottom: 5rem;
+      }
+      .Soc-med-review{
+        background-color: var(--clr-grey1);        
+        display:grid;
+        grid-template-columns: auto 1fr 1fr;
+
+      }
+
+      .desk-grid-card{
+        display:grid;
+              
+        grid-template-rows: 1fr auto auto;
+        grid-template-columns: 1fr;
+        h1{
+          display: block;
+          
+          grid-row:1;
+          margin-left: 0;
+        }
+        ul{
+          display: block;
+          grid-row:2;
+          margin-left: 1.2rem;
+        }
+        button{
+          display: block;
+          grid-row:3;
+          margin-left: 0;
+          border:none;
+
+        }
+      }
+      .desk-grid-card2{
+        display:grid;
+        width: 650px;
+        
+        grid-template-rows: 1fr auto auto;
+        grid-template-columns: 1fr 1fr;
+        margin-top:2rem;
+        gap:2rem;
+        padding-bottom:5rem;
+        h1{
+          grid-row:1;
+          grid-column: 1 / 3;
+        }
+        #grid-card1{
+          display: flex;
+          flex-direction: column;
+          grid-row:2;
+          grid-column:1 / 2;
+          img{
+            margin-bottom: 1rem;
+            margin-left:0;
+          }
+          p{
+            margin-left:0;
+          }
+        }
+        #grid-card2{
+          
+          display: flex;
+          flex-direction: column;
+          grid-row:2;
+          grid-column:2;
+          img{
+            margin-bottom: 1rem;
+            margin-left:0;
+          }
+          p{
+            margin-left:0;
+          } 
+        }
+        button{
+          grid-row:3;
+          margin-left:0;
+          border:none;
+        }
+
+      }
+
+
+      
+
+  }
+
+
+
+
+
+
+
+
 }
