--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@
 :root {
     --clr-primary: #6366F1;
     --clr-gradient:rgb(99, 102, 241, 10%),rgb(218, 70, 239, 5%), rgb(241, 244, 253, 7%);
-    --clr-gradient:rgb(99, 102, 241, 10%),rgb(218, 70, 239, 5%), rgb(241, 244, 253, 7%);
-
     --clr-error:#EF4444;
     --clr-success:#22C55E;
     --clr-warning:#FFBA08;
@@ -27,6 +25,7 @@
     --clr-btnhvr:#ffffff;
     --clr-font1:#131022;
     --clr-font2:#585c7b;
+    --font-primary: font-size:16px;
 
 
 
@@ -120,6 +119,11 @@ input:checked + .slider:before {
 .c1-2bg{
   background-image: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
 }
+
+.bg-primary{
+  background-color: var(--clr-grey1);
+  width: 100%;
+}
 .c1 {
   display:grid;
   grid-template-columns:1fr auto auto;
@@ -149,6 +153,9 @@ background-color: var(--clr-info);
 }
 .feat {
     display: none;
+    a{
+      text-decoration: none;
+    }
   }
 
 
@@ -165,13 +172,11 @@ background-color: var(--clr-info);
   }
 
 .c2 {
-  
   text-align: center;
   align-items: center;
   justify-content: center;
   display: flex;
-  flex-direction: column;
-  
+  flex-direction: column; 
 }
 
 .phone1{
@@ -220,6 +225,7 @@ border: none;
 border-radius: .5em;
 background-color: transparent;
 }
+
 .playbtn{
 border: none;
 border-radius: .5em;
@@ -374,56 +380,62 @@ font-size: 16px;
 }
 
 .learnbtn{
-  display:block ;
+  display: flex;
   background-color: var(--clr-brandbtn);
   width: 159px;
   height: 44px;
   border-radius: .5rem;
-  text-align: center;
+  margin:0;
   align-items: center;
   justify-content: center;
-  align-content: center;
-  img{
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    justify-content: center;
+
+  .arrow-left{
+    display:inline-block;
+    margin-left:0;
   }
-  button{
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    justify-content: center;
+  p{
+    margin: 0 auto;
+    color: #ffffff;
+    display: inline-block;
+    font-weight: 500;
+    font-size: 14px;
   }
 }
 
-
+.contact-box{
+  background-color: transparent;
+  border: none;
+}
 
 .c5{
-  margin:1rem;
+  padding: .5rem;
   p{
     font-size: 18px;
     color: var(--clr-font2);
     text-align: center;
-    
   }
   h1{
     text-align: center;
   }
+  .contact-box{
+    display:none;
+  }
 }
-
 .faqbtrv{
   border:none;
   background-color: transparent;
 }
 .faq1{
-  /* border: 1px solid #E2E5F1;; */
+  
   border-bottom: 1px solid #e2e5f1;
   label{
     font-size: 16px;
     font-weight: 600 ;
     color:#131022;
-    padding:0.5rem;}
+    padding:0.5rem;
+    margin:0 0;
+  }
+    
    
   
   p{
@@ -434,13 +446,11 @@ font-size: 16px;
     padding:1rem;}
 
 }
-
 .faq1b{
   border-bottom: 1px solid #e2e5f1;  display:grid;
   grid-template-columns: 1fr auto;
   place-items: center;
 }
-
 .faq2{
   border-bottom: 1px solid #e2e5f1;  
   display:grid;
@@ -451,6 +461,7 @@ font-size: 16px;
     font-weight: 600 ;
     color:#131022;
     padding-left: 1rem;
+    margin:0;
   }
   
 }
@@ -459,33 +470,27 @@ font-size: 16px;
   display:grid;
   grid-template-columns: 1fr auto;
   padding:0.5rem;
-  label{
-    margin-right: 67px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 600 ;
-    color:#131022;
-    padding-left: 1rem;
-  }
-  
-}
-#faqbt3{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.faq4{
-  border-bottom: 1px solid #e2e5f1;  display:grid;
-  grid-template-columns: 1fr auto;
-  padding:0.5rem;
-  text-align: left;
   margin: 0;
   label{
-    margin-right: 67px;
     font-size: 16px;
     font-weight: 600 ;
     color:#131022;
     padding-left: 1rem;
+    margin:0;
+  }
+}
+.faq4{
+  border-bottom: 1px solid #e2e5f1;  
+  display:grid;
+  grid-template-columns: 1fr auto;
+  padding:0.5rem;
+  margin: 0;
+  label{
+    font-size: 16px;
+    font-weight: 600 ;
+    color:#131022;
+    padding-left: 1rem;
+    margin:0;
   }
 }
 .faq5{
@@ -497,6 +502,7 @@ font-size: 16px;
     font-weight: 600 ;
     color:#131022;
     padding-left: 1rem;
+    margin:0;
   }
 }
 .faq6{
@@ -509,6 +515,7 @@ font-size: 16px;
     font-weight: 600 ;
     color:#131022;
     padding-left: 1rem;
+    margin:0;
   }
 }
 .faqborder{
@@ -518,9 +525,11 @@ font-size: 16px;
 
 .c6{
   background-color: #f3f6ff;
-  margin: 1em;
   border-radius: 0.5em;
   
+}
+.label-desk{
+  display:none;
 }
 .subkort{
   
@@ -593,7 +602,7 @@ font-size: 16px;
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin: 2rem;
+ 
   p{
     margin: 0.2rem;
     color: var(--clr-grey6);
@@ -605,7 +614,7 @@ font-size: 16px;
 @media (width > 1400px){
   .container{ 
     max-width: 1320px;}
-    .c1{
+  .c1{
       display: grid;
       grid-template-columns: auto 1fr auto auto;
       .burgerknapp{
@@ -624,13 +633,26 @@ font-size: 16px;
   .c2{
     display:grid;
     padding-top:5rem;
-    #c25{
+    text-align: left;
+  .phone1{
       display:block;
       grid-column: 3;
       grid-row:1 / 5;
     }
+      .storebtn{
+        display:flex;
+        max-width: 179px;
+        max-height: 52px;
+        overflow: hidden;
+       justify-content: center;
+      }
+      
     h1{
       grid-column: 1 /3;
+      padding:0;
+      font-size: 56px;
+      margin-left: 0;
+      
     }
     .breadtext{
       grid-column: 1/3;
@@ -641,11 +663,19 @@ font-size: 16px;
       grid-row:3;
     }
     .pilcont{
-      display: flex;
-      align-items: center;
-      justify-content: center;
       grid-row:4;
+      padding-top:16rem;
+      margin-left:0;
+      justify-content: left;
+      #c24{
+        margin:0;
+      }
+      label{
+        margin:0;
+      }
+
     }
+
   }
   .c3{
     .logotyp{
@@ -707,47 +737,63 @@ font-size: 16px;
   
   }
     .desktop-review{
-      padding-bottom: 5rem;
+    padding-bottom: 5rem;
     display:grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     padding-top: 5rem;
-      .desktop-grid-1{    
+      
+    .desktop-grid-1{    
         display:grid;
-        grid-template-columns: 1fr 1fr;  
+        grid-template-columns: 1fr 1.5fr; 
+        .graph-img{
+          margin-left:4rem;
+        }
         
       }
       .desktop-grid-2{        
         display:grid;
-        grid-template-columns: 1fr auto;  
+        grid-template-columns: 1fr 1.4fr;  
         padding-bottom: 5rem;
       }
       .Soc-med-review{
         background-color: var(--clr-grey1);        
-        display:grid;
-        grid-template-columns: auto 1fr 1fr;
+        display:flex;
+        padding-top:5rem;
+        h1{
+          font-size:40px;
+          font-weight: 800;
+          margin-right:4rem;
+        }
 
       }
 
       .desk-grid-card{
-        display:grid;
-              
-        grid-template-rows: 1fr auto auto;
-        grid-template-columns: 1fr;
+        display:block;
+        margin-left:4rem;
+        padding-top:2rem;
         h1{
           display: block;
-          
           grid-row:1;
-          margin-left: 0;
+          margin-bottom: 2rem;
+          margin-left: 0rem;
+          font-size: 32px;
+          font-weight: 800;
         }
         ul{
           display: block;
           grid-row:2;
           margin-left: 1.2rem;
+          padding-bottom:2rem;
+          li{
+            margin-bottom: 1rem;
+            font-size: 16px;
+            list-style: url(img/Bg/check-circle.svg);
+          }
         }
         button{
-          display: block;
-          grid-row:3;
+          
+          
           margin-left: 0;
           border:none;
 
@@ -756,7 +802,7 @@ font-size: 16px;
       .desk-grid-card2{
         display:grid;
         width: 650px;
-        
+        padding-right:50px;
         grid-template-rows: 1fr auto auto;
         grid-template-columns: 1fr 1fr;
         margin-top:2rem;
@@ -801,13 +847,58 @@ font-size: 16px;
 
       }
 
-
-      
-
   }
 
+  .c5{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr auto auto;
+    
+    .contact-box{
+      display:inline-block;
+    }
 
+    .contactbtn-con{
+      display: none;
+    }
+  }
+  .c4-1{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    margin:0 0 0 0;
+    height: fit-content;
+    width: fit-content;
+    gap: 2rem;
+    h1{
+      grid-column: 1/3;
+    }
+    p{
+      grid-column: 1/3;
+      grid-row: 2;
+    }
+    button{
+      display:inline-block;
+      margin:0;
+      padding:0;
+      width: fit-content;
+      height: fit-content;
+      
+    }
+  }
 
+  .c6{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:5rem;
+    margin-top:5rem;
+    padding:5rem;
+  }
+  .label-phone{
+    display:none
+  }
+  .label-desk{
+    display:block
+  }
 
 
 
