--- a/style.css
+++ b/style.css
@@ -2,10 +2,7 @@
 
 :root {
     --clr-primary: #6366F1;
-    --clr-gradient:rgb(99, 102, 241, 10%),rgb(218, 70, 239, 5%), rgb(241, 244, 253, 7%);
-    --clr-error:#EF4444;
-    --clr-success:#22C55E;
-    --clr-warning:#FFBA08;
+    --clr-gradient: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
     --clr-brandbtn:#6366F1;
     --clr-secondary:#EFF2FC;
     --clr-info:#4C82F7;
@@ -16,15 +13,15 @@
     --clr-grey5:#B4B7C9;
     --clr-grey6:#9397AD;
     --clr-grey7:#565973;
-    --clr-grey8:#33354D;
+    --clr-grey8:#33354d;
     --clr-grey9:#0B0F19;
     --clr-btnhvr:#ffffff;
     --clr-font1:#131022;
     --clr-font2:#585c7b;
-    --font-primary: font-size:16px;
-
-
-
+    --clr-white: #fff;
+    --clr-font-head:#131022;
+    --clr-font-p:#585c7b;
+    --clr-bg: #F3F6FF
 }
 
 *{
@@ -41,6 +38,9 @@ body{
     font-weight: 400;
     font-style: normal;
     font-size: 16px;   
+    .darkmode-only{
+      display: none;
+    }
 }
 
 button:hover{
@@ -52,6 +52,27 @@ button:hover{
     max-width: 540px;
   }
 }
+html{
+  color-scheme: light;
+}
+h1{
+  color: var(--clr-font-h);
+}
+
+.dark{
+  color-scheme: dark;
+  --clr-font-head:#ffffff;
+  --clr-font-p:hsla(0, 0%, 100%, 0.7);
+
+  .darkmode-only{
+    display:block
+  }
+  .lightmode-only{
+    display:none;
+  }
+
+}
+
 /* FÖLJANDE KOD SNODD FRÅN https://www.w3schools.com/howto/howto_css_switch.asp */
 
 .switch {
@@ -61,7 +82,7 @@ button:hover{
     height: 34px;
   }
   
-  .switch input {
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
@@ -74,7 +95,7 @@ button:hover{
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: var(--clr-grey6);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -86,13 +107,13 @@ button:hover{
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: var(--clr-white);
     -webkit-transition: .4s;
     transition: .4s;
   }
   
 input:checked + .slider {
-    background-color: #2196F3;
+    background-color:var(--clr-brandbtn);
   }
   
 input:focus + .slider {
@@ -115,8 +136,55 @@ input:checked + .slider:before {
   } 
 
 /* HÄR SLUTAR SNODD KOD */
+
+.store-btn{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--clr-grey8);
+  background-color:var(--clr-font-head);
+  border-radius: .5rem;
+  width: 100%;
+  padding:.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .c1-2bg{
-  background-image: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
+  background-image: var(--clr-gradient)
+  
 }
 
 .bg-primary{
@@ -145,6 +213,7 @@ input:checked + .slider:before {
     text-decoration: none;
     padding: 12px 25px;
     display: none;
+    gap:.5rem;
   }
 .signin:hover {
 background-color: var(--clr-info);
@@ -178,6 +247,7 @@ background-color: var(--clr-info);
   justify-content: center;
   display: flex;
   flex-direction: column; 
+  
 }
 
 .phone1{
@@ -186,14 +256,14 @@ background-color: var(--clr-info);
 .moneytext {
   font-size: 34.1px;
   font-weight: 800;
-  color:var(--clr-font1);
+  color:var(--clr-font-h);
   padding: 1rem;
 }
   
 .breadtext {
   font-size:18px ;
   font-weight:400 ;
-  color: var(--clr-font2);
+  color: var(--clr-font-p);
   align-items: center;
   p{
     margin:0;
@@ -202,13 +272,11 @@ background-color: var(--clr-info);
 
 }
 .storerek{
-  display:grid;
-  grid-template-columns:auto;
-  grid-template-rows: auto;
-  height:auto ;
-  align-items: center;
-  margin-top: 2rem;
+  display:flex;
+  flex-direction: column;
   gap:1rem;
+  width: 100%;
+  padding:1rem;
 }
 
 .playbtn {
@@ -245,6 +313,7 @@ cursor: pointer;
   justify-content: center;
   align-items: center;
   gap: .5rem;
+  
   button{
     border:none;
     background-color: transparent;
@@ -262,6 +331,11 @@ textarea{
 .logotyp
 {
   display: none;
+  gap:1rem;
+}
+.logo-border{
+  border: 1px solid var(--clr-grey3);
+  border-radius: .5rem;
 }
 
 .c31 {
@@ -278,7 +352,7 @@ textarea{
     padding: 1rem;
     font-size: 18px;
     font-weight: 400;
-    color: var(--clr-font2);
+    color: var(--clr-font-p);
   }
 }
 
@@ -304,7 +378,7 @@ textarea{
 grid-column: 2;
 margin-left:30px;
 margin-bottom: 0;
-color:var(--clr-font1);
+color:var(--clr-font-h);
 font-weight: 800;
 font-size: 20px;
 
@@ -313,7 +387,7 @@ font-size: 20px;
 grid-column: 2;
 grid-column: 2;
 margin-left: 30px;
-color:var(--clr-font2);
+color:var(--clr-font-p);
 font-weight: 400;
 font-size: 16px;
 }
@@ -358,7 +432,7 @@ font-size: 16px;
   margin-right: 20px;
   h1{
     font-size: 27.9px;
-    color: var(--clr-font1);
+    color: var(--clr-font-h);
     font-weight: 800;
     padding-bottom:2rem;
   }
@@ -376,7 +450,7 @@ font-size: 16px;
   margin-right: 20px;
   h1{
     font-size: 21.6px;
-    color: var(--clr-font1);
+    color: var(--clr-font-h);
     font-weight: 800;
     margin-left: 2rem;
     margin-right: 2rem;
@@ -384,7 +458,7 @@ font-size: 16px;
 
   p{
     font-size: 16px;
-    color: var(--clr-font2);
+    color: var(--clr-font-p);
     font-weight: 400;
   }
 }
@@ -409,7 +483,7 @@ font-size: 16px;
   }
   p{
     margin: 0 auto;
-    color: #ffffff;
+    color: var(--clr-white);
     display: inline-block;
     font-weight: 500;
     font-size: 14px;
@@ -426,7 +500,7 @@ font-size: 16px;
   padding-top:2rem;
   p{
     font-size: 18px;
-    color: var(--clr-font2);
+    color: var(--clr-font-p);
     text-align: center;
   }
   h1{
@@ -454,7 +528,7 @@ font-size: 16px;
   label{
     font-size: 16px;
     font-weight: 600 ;
-    color:#131022;
+    color:var(--clr-font1);
     padding-left:1rem;
     margin:0 0;
   }
@@ -483,7 +557,7 @@ font-size: 16px;
   label{
     font-size: 16px;
     font-weight: 600 ;
-    color:#131022;
+    color:var(--clr-font-h);
     padding-left: 1rem;
     margin:0;
   }
@@ -499,7 +573,7 @@ font-size: 16px;
   label{
     font-size: 16px;
     font-weight: 600 ;
-    color:#131022;
+    color:var(--clr-font-h);
     padding-left: 1rem;
     margin:0;
   }
@@ -514,7 +588,7 @@ font-size: 16px;
   label{
     font-size: 16px;
     font-weight: 600 ;
-    color:#131022;
+    color:var(--clr-font-h);
     padding-left: 1rem;
     margin:0;
   }
@@ -529,7 +603,7 @@ font-size: 16px;
   label{
     font-size: 16px;
     font-weight: 600 ;
-    color:#131022;
+    color:var(--clr-font-h);
     padding-left: 1rem;
     margin:0;
   }
@@ -542,7 +616,7 @@ font-size: 16px;
   label{
     font-size: 16px;
     font-weight: 600 ;
-    color:#131022;
+    color:var(--clr-font-h);
     padding-left: 1rem;
     margin:0;
   }
@@ -555,9 +629,8 @@ font-size: 16px;
   margin-left:0;
 }  
 }
-
 .c6{
-  background-color: #f3f6ff;
+  background-color: var(--clr-grey1);
   border-radius: 0.5em;
   margin-bottom:2rem;
 
@@ -588,7 +661,7 @@ font-size: 16px;
     background-color: var(--clr-primary);
     align-items: center;
     text-align: center;
-    color: var(--clr-grey1);
+    color: var(--clr-font-h);
     border-radius: 0rem .5rem .5rem 0rem;
     text-decoration: none;
     padding: 12px 25px;
@@ -625,7 +698,7 @@ font-size: 16px;
   background-color: var(--clr-primary);
   align-items: center;
   text-align: center;
-  color: var(--clr-grey1);
+  color: var(--clr-font-p);
   border-radius: 8px;
   text-decoration: none;
   padding: 12px 25px;
@@ -650,6 +723,62 @@ font-size: 16px;
     font-size: 14px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @media (width > 768px){
@@ -680,17 +809,17 @@ font-size: 16px;
     display:grid;
     padding-top:2rem;    
   .phone2{
+      margin-right: 10px;
       display:block;
       grid-column: 2;
       grid-row:2 / 5;
     }
-      .storebtn{
-        display:flex;
-        max-width: 125px;
-        max-height: 41px;
-        overflow: hidden;
-       justify-content: center;
-      }
+    .storebtn{
+    max-width: 125px;
+    max-height: 41px;
+    overflow: hidden;
+        
+    }
       
     h1{
       grid-column: 1 /3;
@@ -710,11 +839,13 @@ font-size: 16px;
     }
     .storerek{
       display:flex;
+      flex-direction: row;
       grid-row:3;
       align-items: start;
-      margin-left:1rem;
+      margin-left:0;
       text-align: start;
       justify-content: start;
+      padding-left:0;
       .storebtn{
         margin-left:0;
       }
@@ -738,30 +869,16 @@ font-size: 16px;
     .logotyp{
       display:flex;
       padding-top:2rem;
-      #logo1{
+      #logo1, #logo2, #logo3, #logo4{
+        display:block;
+        width: auto;
+        height: auto;
         margin-left:0;
-        height: 98px;
         width: 158px;
-      }
-      #logo2{
-        margin-left:0;
         height: 98px;
-        width: 158px;
+        padding:1rem;
       }
-      #logo3{
-        margin-left:0;
-        height: 98px;
-        width: 158px;
-      }
-      #logo4{
-        margin-left:0;
-        height: 98px;
-        width: 158px;
-      }
-      #logo5{
-        display:none;
-      }
-      #logo6{
+      #logo5, #logo6{
         display:none;
       }
     }
@@ -833,7 +950,7 @@ font-size: 16px;
         label{
           font-size: 16px;
           font-weight: 600 ;
-          color:#131022;
+          color:var(--clr-font-h);
           padding-left: 1rem;
           margin:0;
         }
@@ -873,6 +990,8 @@ font-size: 16px;
 @media (width > 1400px){
   .container{ 
     max-width: 1320px;}
+
+
   .c1{
       display: grid;
       grid-template-columns: auto 1fr auto auto;
@@ -880,7 +999,7 @@ font-size: 16px;
         display:none;
       }
     .signin{
-      display:block
+      display:flex;
     }
     .feat{
       display:block;
@@ -893,7 +1012,7 @@ font-size: 16px;
     display:grid;
     padding-top:5rem;
     text-align: left;
-  .phone1{
+    .phone1{
       display:block;
       grid-column: 3;
       grid-row:1 / 5;
@@ -903,28 +1022,24 @@ font-size: 16px;
     .phone2{
       display:none;
     }
-      .storebtn{
-        display:flex;
-        max-width: 179px;
-        max-height: 52px;
-        overflow: hidden;
-       justify-content: center;
-      }
-      
     h1{
       grid-column: 1 /3;
       padding:0;
       font-size: 56px;
       margin-left: 0;
-      
     }
     .breadtext{
       grid-column: 1/3;
       grid-row: 2;
+      margin-left:0;
     }
     .storerek{
       display:flex;
       grid-row:3;
+      grid-column: 1 / 3;
+      margin-left:0;
+      padding-left:0;
+      max-width: 60%;
     }
     .pilcont{
       grid-row:4;
@@ -950,6 +1065,9 @@ font-size: 16px;
         width: auto;
         height: auto;
         margin-left:0;
+        width: 198px;
+        height: 100px;
+        padding:2rem;
       }
 
       
@@ -1235,6 +1353,9 @@ font-size: 16px;
   }
   .force-grid{
     display:grid;
+  }
+  .darkmode-only{
+    display:flex;
   }
 
 
