--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-:root {
+/* :root {
 
     --clr-primary: #6366F1;
     --clr-gradient: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
@@ -30,7 +30,7 @@
     --clr-header:#0B0F19;
     --clr-text: #33354d;
     --clr-shadow:rgba(0, 0, 0, 0.2)
-}
+} */
 
 *{
     box-sizing: border-box;
