--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,3 @@
-@import url(misc/box-shadow.scss);
-@import url(Color/color.scss);
+@import "./Color/color";
+@import "./text/Text-style";
+@import "./misc/box-shadow";
