--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-/* :root {
-
+:root {
     --clr-primary: #6366F1;
     --clr-gradient: linear-gradient(to top, rgba(99, 102, 241, 10%), rgba(218, 70, 239, 5%), rgba(241, 244, 253, 7%));
     --clr-brandbtn:#6366F1;
@@ -30,18 +29,39 @@
     --clr-header:#0B0F19;
     --clr-text: #33354d;
     --clr-shadow:rgba(0, 0, 0, 0.2)
-} */
-
+}
+.dark{
+  color-scheme: dark;
+  --clr-font-head:#ffffff;
+  --clr-font-p:hsla(0, 0%, 100%, 0.7);
+  --clr-card-bg: hsla(239, 84%, 67%, 0.08);
+  --clr-grey1:hsla(225, 100%, 98%, 0.048);
+  --clr-btn-text:#f3f6ff;
+  --clr-btn-bg:hsla(0, 0%, 100%, 0.05);
+  --clr-border:hsla(0, 0%, 100%, 0.15);
+  --clr-btn-text:#FFFFFF;
+  --clr-header:#FFFFFF;
+  --clr-bg: hsla(0, 0%, 100%, 0.04);
+  --clr-shadow:hsla(0, 0%, 100%, 0.05);
+  --clr-text: #FFFFFF;
+  .darkmode-only{
+    display:block;
+  }
+  .lightmode-only{
+    display:none;
+    
+  }
+  .review-img-dark{
+    margin-right:1.5rem;
+  }
+}
 *{
     box-sizing: border-box;
     margin: 0 auto;
     padding: 0;
-    
-    
 }
 
 body{
-  
     font-family: "Manrope", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -71,31 +91,7 @@ h1{
   color: var(--clr-font-h);
 }
 
-.dark{
-  color-scheme: dark;
-  --clr-font-head:#ffffff;
-  --clr-font-p:hsla(0, 0%, 100%, 0.7);
-  --clr-card-bg: hsla(239, 84%, 67%, 0.08);
-  --clr-grey1:hsla(225, 100%, 98%, 0.048);
-  --clr-btn-text:#f3f6ff;
-  --clr-btn-bg:hsla(0, 0%, 100%, 0.05);
-  --clr-border:hsla(0, 0%, 100%, 0.15);
-  --clr-btn-text:#FFFFFF;
-  --clr-header:#FFFFFF;
-  --clr-bg: hsla(0, 0%, 100%, 0.04);
-  --clr-shadow:hsla(0, 0%, 100%, 0.05);
-  --clr-text: #FFFFFF;
-  .darkmode-only{
-    display:block;
-  }
-  .lightmode-only{
-    display:none;
-    
-  }
-  .review-img-dark{
-    margin-right:1.5rem;
-  }
-}
+
 
 /* FÖLJANDE KOD SNODD FRÅN https://www.w3schools.com/howto/howto_css_switch.asp */
 
@@ -160,6 +156,9 @@ input:checked + .slider:before {
   } 
 
 /* HÄR SLUTAR SNODD KOD */
+.box-sdw{
+  box-shadow: 0 4px 8px 0 var(--clr-shadow);
+}
 
 .store-btn{
   display:flex;
@@ -171,40 +170,6 @@ input:checked + .slider:before {
   width: 90%;
   padding:.5rem;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .c1-2bg{
   background-image: var(--clr-gradient)
@@ -228,21 +193,22 @@ input:checked + .slider:before {
   margin-left: 0.5rem;
   padding-top: .16rem;
 }
-.signin{
+
+.btn-primary{
     background-color: var(--clr-primary);
     text-align: center;
     color: var(--clr-btn-text);
     justify-content: center;
-    display:flex;
+    display:none;
     border-radius: 8px;
     align-items: center;
     text-decoration: none;
     padding: 12px 25px;
-    display: none;
     gap:.5rem;
     margin-right: .5rem;
+    width: 159px;
   }
-.signin:hover {
+.btn-hover:hover {
 background-color: var(--clr-info);
 
 }
@@ -499,29 +465,6 @@ font-size: 16px;
   display:none;
 }
 
-.learnbtn{
-  display: flex;
-  background-color: var(--clr-brandbtn);
-  width: 159px;
-  height: 44px;
-  border-radius: .5rem;
-  margin:0;
-  align-items: center;
-  justify-content: center;
-
-  .arrow-left{
-    display:inline-block;
-    margin-left:0;
-  }
-  p{
-    margin: 0 auto;
-    color: var(--clr-white);
-    display: inline-block;
-    font-weight: 500;
-    font-size: 14px;
-  }
-}
-
 .contact-box{
   background-color: transparent;
   border: none;
@@ -542,6 +485,10 @@ font-size: 16px;
   .contact-box{
     display:none;
   }
+  span{
+    margin-left:.5rem;
+    text-align: start;
+  }
 }
 .c4-1{
   padding-bottom:2rem;
@@ -549,7 +496,7 @@ font-size: 16px;
   text-align: start;
 }
 
-.faqbt-expanded{
+.faq-bt-expanded{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -563,7 +510,7 @@ font-size: 16px;
 
 
 }
-.faqbt-closed{
+.faq-bt-closed{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -744,57 +691,6 @@ font-size: 16px;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media (width > 768px){
   .tablet-only{
     display:block}
@@ -821,31 +717,30 @@ font-size: 16px;
   }
   .c2{
     display:grid;
-    padding-top:2rem;    
-  .phone2{
-      align-items: start;
+    padding-top:2rem; 
+
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 1fr auto;
+    .phone2{
       padding-left: 0;
       display:flex;
       grid-column: 2;
       grid-row:2 / 5;
+      max-width: 380px;
     }
-
-      
     h1{
       grid-column: 1 /3;
       grid-row:1;
       padding:0;
       font-size: 56px;
-      margin:2rem 5rem ;
-      
-      
+      margin:2rem 5rem ;   
     }
     .breadtext{
       grid-column: 1;
       grid-row: 2;
       text-align: start;
-      margin-left:1rem;
-      
+      margin-left:0; 
     }
     .storerek{
       display:flex;
@@ -862,24 +757,18 @@ font-size: 16px;
     }
     .pilcont{
       grid-row:4;
-      
       margin-left:1rem;
       justify-content: start;
-      button{margin:0;
-      
+      margin-left:0;
+      span{
+        margin-left: .5rem;
       }
-      #c24{
+      button{
         margin:0;
       }
-      label{
-        margin:0;
-      }
-
     }
 
   }
-
-
 
   .c3{
     .logotyp{
@@ -1020,6 +909,10 @@ font-size: 16px;
     max-width: 1320px;}
   .desktop-only{
     display:block;
+  }
+  
+  .btn-primary{
+    display: flex;
   }
 
   .c1{
