--- a/scss/main.css
+++ b/scss/main.css
@@ -142,6 +142,6 @@
   font-weight: 400;
 }
 
-.box-sdw1 {
+.box-sdw {
   box-shadow: 0 4px 8px 0 var(--clr-shadow);
 }/*# sourceMappingURL=main.css.map */
