--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+@import "./Mixins/mixins-buttons";
+@import "./Components/buttons";
+
 @import "./Color/color";
 @import "./text/Text-style";
 @import "./misc/box-shadow";
