--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1,6 +1,10 @@
-@import "./Mixins/mixins-buttons";
-@import "./Components/buttons";
+@import "./Mixins/mixins";
+
+
+
+
 
 @import "./Color/color";
+@import "./Components/components";
 @import "./text/Text-style";
 @import "./misc/box-shadow";
